--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
+spring.banner.location=classpath:/banner.txt
+spring.application.name=@project.name@
+spring.application.version=@project.version@
+spring.application.description=@project.description@
+spring.application.groupId=@project.groupId@
+spring.application.artifactId=@project.artifactId@
+spring.application.java=@java.version@
+
+server.servlet.context-path=/@project.artifactId@
+
 spring.datasource.url=jdbc:mysql://localhost/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
