--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.username=root
 spring.datasource.password=1234
 
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
