ajustando payload das requisições

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,12 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 
+#NAO PERMITIR MANDAR PARAMETROS QUE NÃO EXISTEM NA API
+spring.jackson.deserialization.fail-on-unknown-properties=true
+
+#NAO PERMITIR ENVIAR PARAMETROS ANOTADOS COM JSONIGNORE
+spring.jackson.deserialization.fail-on-ignored-properties=true
+
 
 #HIKARI - Pool de conexoes
 spring.datasource.hikari.maximum-pool-size=5
