adicionando handle especifico

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,8 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 #NAO PERMITIR ENVIAR PARAMETROS ANOTADOS COM JSONIGNORE
 spring.jackson.deserialization.fail-on-ignored-properties=true
 
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
 
 #HIKARI - Pool de conexoes
 spring.datasource.hikari.maximum-pool-size=5
