--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,14 +40,14 @@ spring.datasource.hikari.idle-timeout=10000
 spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
 # The format used for the keystore. It could be set to JKS in case it is a JKS file
-server.ssl.key-store-type=PKCS12
+#server.ssl.key-store-type=PKCS12
 # The path to the keystore containing the certificate
-server.ssl.key-store=classpath:keystore/baeldung.p12
+#server.ssl.key-store=classpath:keystore/baeldung.p12
 # The password used to generate the certificate
-server.ssl.key-store-password=bradseg
+#server.ssl.key-store-password=bradseg
 # The alias mapped to the certificate
-server.ssl.key-alias=baeldung
+#server.ssl.key-alias=baeldung
 
-server.ssl.enabled=true
+#server.ssl.enabled=true
 
-server.port=443
+#server.port=443
