configuracao de representacao de atributo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,9 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 #NAO PERMITIR ENVIAR PARAMETROS ANOTADOS COM JSONIGNORE
 spring.jackson.deserialization.fail-on-ignored-properties=true
 
+##ALTERAR REPRESENTACAO DOS ATRIBUTOS DE REQUEST/RESPONSE
+#spring.jackson.property-naming-strategy=SNAKE_CASE
+
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
