--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.servlet.context-path=/@project.artifactId@
 
 spring.datasource.url=jdbc:mysql://localhost/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=
 
 #spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
