--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,7 @@
 							</execution>
 						</executions>
 						<configuration>
-							<repository>algafood-api</repository>
+							<repository>myfood-api</repository>
 							<buildArgs>
 								<JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
 							</buildArgs>
