--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,8 @@ spring.jackson.deserialization.fail-on-ignored-properties=true
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
+myfood.storage.local.diretorio-fotos=C:\java\catalogo-fotos
+
 #HIKARI - Pool de conexoes
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.minimum-idle=3
