--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.application.java=@java.version@
 
 server.servlet.context-path=/@project.artifactId@
 
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}/myfood?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 
@@ -31,7 +31,7 @@ spring.jackson.deserialization.fail-on-ignored-properties=true
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
-myfood.storage.local.diretorio-fotos=C:\java\catalogo-fotos
+myfood.storage.local.diretorio-fotos=C:\\java\\catalogo-fotos
 
 #HIKARI - Pool de conexoes
 spring.datasource.hikari.maximum-pool-size=5
